--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "framer-motion": "^12.4.10",
+    "gsap": "^3.12.7",
     "leaflet": "^1.9.4",
     "next": "15.2.0",
     "next-intl": "^3.26.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
-    "sass": "^1.85.1"
+    "sass": "^1.85.1",
+    "three": "^0.174.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
