--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.4.10",
     "gsap": "^3.12.7",
+    "jsm": "^0.0.1",
     "leaflet": "^1.9.4",
     "next": "15.2.0",
     "next-intl": "^3.26.5",
@@ -18,6 +19,7 @@
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0",
     "sass": "^1.85.1",
+    "spline": "^0.0.0",
     "three": "^0.174.0"
   },
   "devDependencies": {
